gitops_apps/hello-world-blue-green/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world-blue-green
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
