gitops_apps/hello-world-blue-green/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-quay
  labels: {}
spec:
  to:
    kind: Service
    name: hello-quay-blue
    weight: 0
  alternateBackends:
    - weight: 100
      kind: Service
      name: hello-quay-green 
  port:
    targetPort: 8080
  tls:
    termination: edge
